# Bowling_IRC

./: Color_Traction_system.py  README.md  ebmeded.c
Arduino_nano/Motor encoder calibrating with ir/Calibration/: Calibration.ino
Arduino_nano/PID-isolated/: CoolTerm Capture (Eperament1.CoolTermSettings) 2025-09-29 19-47-34-418.csv  Eperament1.CoolTermSettings  Exe2.csv  Sync.csv  Sync2.csv  Sync3.csv  Sync4.csv  Sync5.csv  Sync6.csv  Sync7.csv
Arduino_nano/PID-isolated/MPU_PID_Angle_control/MPU_PID_FedBack/: MPU_PID_FedBack.ino
Arduino_nano/PID-isolated/Motion_non_blocking_PID/: Motion_non_blocking_PID.ino
Arduino_nano/PID-isolated/Same_but_more_readable/: Same_but_more_readable.ino
Arduino_nano/main code/: sketch_aug26a.ino
Arduino_nano/main code/sketch_aug26a/: sketch_aug26a.ino
Arduino_nano/sketch_aug26a/: sketch_aug26a.ino
Arduino_nano/test code/: sketch_aug31a.ino
Arduino_nano/test code/sketch_aug31a/: sketch_aug31a.ino
Bowling/: CMakeLists.txt  platformio.ini
Bowling/.pio/libdeps/esp32dev/Adafruit AHRS/: .piopm
Bowling/src/: main.c
Bowling/src/PID/: Motion_PID.c
ESP_Project/project-name/Project_components/: Encoder.c  Encoder.h  Motor.c  Motor.h  Motor_PID_encoded.h  PID.c  PID.h  Serial.c  Serial.h
ESP_Project/project-name/main/: CMakeLists.txt  main.c
MPU6050/: main.c  mpu.c  mpu.h
QTR_8RC sencor code/: QTR_8RC.c  main.c  main.h
pwm signal code/: main.c
python sockets/: example_socket_client.py  example_sockets_server.py  sockets_server.py
wifi/: main.c  main.h
